preheader,logo,cover,text

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
         background-color: #fafdfe;Margin:0;padding:0;width: 100%;max-width: 600px;">
 
         @include('partials/logo.html')
+        @include('partials/cover.html')
+        @include('partials/text.html')
 
 
       </table>
