--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
         @include('partials/logo.html')
         @include('partials/cover.html')
         @include('partials/text.html')
+        @include('partials/two-cols.html')
+        @include('partials/hero.html')
 
 
       </table>
