--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
         @include('partials/text.html')
         @include('partials/two-cols.html')
         @include('partials/hero.html')
+        @include('partials/three-cols.html')
 
 
       </table>
