--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
         @include('partials/two-cols.html')
         @include('partials/hero.html')
         @include('partials/three-cols.html')
+        @include('partials/social.html')
+        @include('partials/footer.html')
 
 
       </table>
